# Hyades-Cyan

./: .gitignore
apps/mobile/: CMakeLists.txt  prj.conf
apps/mobile/boards/: m5stack_core2.overlay
apps/mobile/src/: main.c
